subiendo la prueba

--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -4,5 +4,8 @@ import Seccion from '../components/seccion.astro';
 
 <Seccion title ="Skills">
 
+
+    <h3>solo es una preueba bb</h3>
+
 </Seccion>
 
