--- a/src/components/educacion.astro
+++ b/src/components/educacion.astro
@@ -6,10 +6,11 @@ import Seccion from '../components/seccion.astro';
 
     <p>
 
-        Estudie en el colegio Mi Redentor primeria y segundario graduandome de primeria en el año 2015
-        y posteriormente despues de 5 años graduandome ene el año 2020, actualmente curos tercer año de ingenieria 
-        en computacion en la Universidad Nacional Politecnica (UNP) en Managua Nicaragua, iniciando mis estudios en
-        esta alma mater en el año 2022.
+        Estudie en el colegio <b> Mi Redentor </b>primaria y segundaria graduandome de primaria en el año <b>2015</b>
+        y posteriormente despues de 5 años graduandome  de segundaria en el año <b>2020</b>, actualmente curo
+        tercer año de ingenieria 
+        en computacion en la Universidad Nacional Politecnica <b>(UNP)</b> en Managua Nicaragua, iniciando mis estudios en
+        esta alma mater en el año <b>2022</b>.
 
 
     </p>
