--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -12,7 +12,7 @@ import Section from '../components/seccion.astro';
 
             <header>
               <h1>Kenneth Gabriel Flores Saballos</h1>
-              <p>Estudiante de <b>Ing.computacion</b> en la Univesidad Nacional Polirtecnica <b>UNP</b></p>
+              <p>Estudiante de <b>Ing.computacion</b> en la Univesidad Nacional Politecnica <b>UNP</b></p>
               <span>
                 <p>Managua</p>
                 <p>Nicaragua</p>
