--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -21,7 +21,7 @@ import Seccion from '../components/seccion.astro';
 
    
     <p>
-    Desarrollo en conjunto con un gruopo de desarrolladores de una base de datos
+    Desarrollo en conjunto con un grupo de desarrolladores de una base de datos
     de un modelo de negocio de una panaderia <b>(proyecto desarrollado como parte de actividades academicas,
     aun en desarrollo)</b> base de datos desarrollada en <b>SQL SERVER</b>
     </p>
