--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -10,22 +10,22 @@ import Seccion from '../components/seccion.astro';
     <article>
 
         <div>
-            <img src="c++.png" alt="">
+            <img src="portfolio/c++.png" alt="">
         </div>
           
         <div>
 
-            <img src="c.png" alt="">
+            <img src="portfolio/c.png" alt="">
     
         </div>
 
         <div>
-            <img src="java.png" alt="">
+            <img src="portfolio/java.png" alt="">
         </div>
 
         <div>
 
-            <img src="csharp.png" alt="">
+            <img src="portfolio/csharp.png" alt="">
            
 
         </div>
@@ -34,23 +34,23 @@ import Seccion from '../components/seccion.astro';
     <article>
 
         <div>
-            <img src="html.png" alt="">
+            <img src="portfolio/html.png" alt="">
         </div>
 
         <div>
 
-            <img src="css.png" alt="">
+            <img src="portfolio/css.png" alt="">
             
     
         </div>
 
         <div>
-            <img src="js.png" alt="">
+            <img src="portfolio/js.png" alt="">
     
         </div>
 
         <div>
-            <img src="git.png" alt="">
+            <img src="portfolio/git.png" alt="">
     
         </div>
 
