componiendo las fotos

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -59,7 +59,7 @@ import Section from '../components/seccion.astro';
 
      
          <figure>
-                <img src="portfolio/img-projects.jpg" alt="">
+                <img src="img-projects.jpg" alt="">
          </figure>
         
 
