--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -10,22 +10,22 @@ import Seccion from '../components/seccion.astro';
     <article>
 
         <div>
-            <img src="portfolio/c++.png" alt="">
+            <img src="c++.png" alt="">
         </div>
           
         <div>
 
-            <img src="portfolio/c.png" alt="">
+            <img src="c.png" alt="">
     
         </div>
 
         <div>
-            <img src="portfolio/java.png" alt="">
+            <img src="java.png" alt="">
         </div>
 
         <div>
 
-            <img src="portfolio/csharp.png" alt="">
+            <img src="csharp.png" alt="">
            
 
         </div>
