terminando de componer las imagenes

--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -34,23 +34,23 @@ import Seccion from '../components/seccion.astro';
     <article>
 
         <div>
-            <img src="portfolio/html.png" alt="">
+            <img src="html.png" alt="">
         </div>
 
         <div>
 
-            <img src="portfolio/css.png" alt="">
+            <img src="css.png" alt="">
             
     
         </div>
 
         <div>
-            <img src="portfolio/js.png" alt="">
+            <img src="js.png" alt="">
     
         </div>
 
         <div>
-            <img src="portfolio/git.png" alt="">
+            <img src="git.png" alt="">
     
         </div>
 
