--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -59,7 +59,7 @@ import Section from '../components/seccion.astro';
 
      
          <figure>
-                <img src="img-projects.jpg" alt="">
+                <img src="foto-cv.png" alt="">
          </figure>
         
 
@@ -96,6 +96,7 @@ import Section from '../components/seccion.astro';
         border-radius: 100px;
         border:3px solid #eee;
         box-shadow: 0px 0px 20px rgb(215, 186, 186,1.0);
+        background-color: white;
         
         
     }
