--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -48,7 +48,7 @@ import Section from '../components/seccion.astro';
                 stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-mail"><path stroke="none" d="M0 0h24v24H0z" 
                 fill="none"/><path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" /><path d="M3 7l9 6l9 -6" />
                 </svg>
-                <p>eterkenth@gmail.com</p>
+                <p>eter.kenth@gmail.com</p>
 
 
             </div>
