--- a/src/components/educacion.astro
+++ b/src/components/educacion.astro
@@ -6,8 +6,8 @@ import Seccion from '../components/seccion.astro';
 
     <p>
 
-        Estudie en el colegio <b> Mi Redentor </b>primaria y segundaria graduandome de primaria en el año <b>2015</b>
-        y posteriormente despues de 5 años graduandome  de segundaria en el año <b>2020</b>, actualmente curso
+        Estudie en el colegio <b> Mi Redentor </b>primaria y secundaria graduandome de primaria en el año <b>2015</b>
+        y posteriormente despues de 5 años graduandome  de secundaria en el año <b>2020</b>, actualmente curso
         tercer año de ingenieria 
         en computacion en la Universidad Nacional Politecnica <b>(UNP)</b> en Managua Nicaragua, iniciando mis estudios en
         esta alma mater en el año <b>2022</b>.
